New advanced search genres selection implementation

--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -6,7 +6,7 @@
     >
   </h5>
 
-  <form [formGroup]="form" (submit)="submit($event)">
+  <form [formGroup]="form" (submit)="submit()">
     <section class="parameter-grid">
       <span>Рейтинг не ниже чем:</span>
       <input
@@ -30,10 +30,26 @@
       </button>
     </section>
 
-    <details open="open">
-      <summary>Жанры</summary>
-      <genre-input-control [form]="form"></genre-input-control>
-    </details>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>Жанры</mat-panel-title>
+        <mat-panel-description>
+          @for (genre of getFormParams().genres; track genre) {
+          <mat-chip (click)="unselectGenre($event, genre)"
+            >{{ FB2_GENRES[genre] }} ✕</mat-chip
+          >
+          }
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <div class="content">
+        @for (genreKey of FB2_GENRE_UNIQUE_KEYS; track genreKey) {
+        <label>
+          <input type="checkbox" [formControlName]="genreKey" />
+          <span>{{ FB2_GENRES[genreKey] }}</span>
+        </label>
+        }
+      </div>
+    </mat-expansion-panel>
 
     <div class="action-panel">
       <button mat-fab extended="true" color="success" type="submit">
