New advanced search genres selection implementation - // improvements

--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -59,7 +59,7 @@
     </div>
   </form>
   <p>&nbsp;</p>
-  <h5 #searchResult>Результаты поиска</h5>
+  <h5>Результаты поиска</h5>
   <div class="search-result">
     @if (data()) { @if (data()!.length === 0) {
     <span>По вашему запросы книги не найдены</span>
