BOOK-1: Добавить фильтр жанров

--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -29,7 +29,7 @@
         Искать
       </button>
     </section>
-    <genres-filter-control [form]="form"> </genres-filter-control>
+    <genres-filter-control [form]="genresGroup"></genres-filter-control>
     <div class="action-panel">
       <button mat-fab extended="true" color="success" type="submit">
         <mat-icon>search</mat-icon>
