--- a/apps/site/src/app/features/advanced-search/components/genres-filter-control/genres-filter-control.component.html
+++ b/apps/site/src/app/features/advanced-search/components/genres-filter-control/genres-filter-control.component.html
@@ -9,9 +9,9 @@
       }
     </mat-panel-description>
   </mat-expansion-panel-header>
-  <div class="genres-list-container" [formGroup]="form()">
+  <div class="genres-list-container">
     <genres-list-filter [genres]="genreKeys"></genres-list-filter>
-    <div class="genres-list">
+    <div class="genres-list" [formGroup]="form()">
       @for (genreKey of genreKeys(); track genreKey) {
       <label>
         <input type="checkbox" [formControlName]="genreKey" />
