--- a/apps/site/src/app/features/book-search/components/books/book-search.component.html
+++ b/apps/site/src/app/features/book-search/components/books/book-search.component.html
@@ -1,12 +1,11 @@
 <div class="container">
   <h5 loading [thenShow]="books">
     Поиск по имени
-    <small
-      ><a [routerLink]="['/advanced-search']" class="underline"
-        >расширенный поиск</a
-      >
-      (Beta)</small
-    >
+    <small>
+      <a [routerLink]="['/advanced-search']" class="underline">
+        расширенный поиск
+      </a>
+    </small>
     <br />
     <form (submit)="submit($event)">
       <input
