BOOK-4: Отступы заголовков поиска книг разные

--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <h5>
     Расширенный поиск
-    <small
-      ><a [routerLink]="['/books']" class="underline">поиск по имени</a></small
-    >
+    <small>
+      <a [routerLink]="['/books']" class="underline">поиск по имени</a>
+    </small>
   </h5>
 
   <form [formGroup]="form" (submit)="submit()">
