BOOK-2: По окончанию таймера выключать режим no sleep

--- a/apps/site/src/app/features/player/components/player/player.component.html
+++ b/apps/site/src/app/features/player/components/player/player.component.html
@@ -1,7 +1,8 @@
 @if (book()) {
 <ng-container class="container">
+  <keep-screen-on [enabled]="keepScreenOnEnable()"></keep-screen-on>
   @if (countDownEnabled()) {
-  <countdown-timer></countdown-timer>
+  <countdown-timer (complete)="countdownTimerComplete()"></countdown-timer>
   }
   <book-canvas
     [book]="book"
