BOOK-3: Разобраться почему ругается SASS (mixed declarations)

--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.scss
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.scss
@@ -5,9 +5,11 @@
   .container {
     @include scrollable-container;
 
-    padding: 2 * $default-padding;
-    display: flex;
-    flex-direction: column;
+    & {
+      padding: 2 * $default-padding;
+      display: flex;
+      flex-direction: column;
+    }
 
     .header {
       font-size: 1.5em;
