--- a/apps/site/src/app/features/voice/components/voice.component.scss
+++ b/apps/site/src/app/features/voice/components/voice.component.scss
@@ -3,7 +3,10 @@
 
 .container {
   @include scrollable-container;
-  padding: 2 * $default-padding;
+
+  & {
+    padding: 2 * $default-padding;
+  }
 
   textarea {
     width: 400px;
