--- a/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
+++ b/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
@@ -7,15 +7,18 @@ div {
 
   .scrollable-canvas {
     @include scrollable-container;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding-top: 2 * $default-padding;
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    background-color: burlywood;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0.88);
+
+    & {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      padding-top: 2 * $default-padding;
+      width: 100%;
+      max-width: 100%;
+      height: 100%;
+      background-color: burlywood;
+      -webkit-text-fill-color: rgba(0, 0, 0, 0.88);
+    }
 
     & * {
       font-family: Literata, sans-serif !important;
