--- a/apps/site/src/app/features/welcome/components/welcome.component.scss
+++ b/apps/site/src/app/features/welcome/components/welcome.component.scss
@@ -3,7 +3,10 @@
 
 .container {
   @include scrollable-container;
-  padding: $default-padding 2 * $default-padding;
+
+  & {
+    padding: $default-padding 2 * $default-padding;
+  }
 
   section {
     max-width: 700px;
