--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.scss
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.scss
@@ -5,9 +5,11 @@
   .container {
     @include scrollable-container;
 
-    padding: 2 * $default-padding;
-    display: flex;
-    flex-direction: column;
+    & {
+      padding: 2 * $default-padding;
+      display: flex;
+      flex-direction: column;
+    }
 
     .header {
       font-size: 1.5em;
@@ -51,39 +53,11 @@
 
     .search-result {
       margin-top: $default-padding;
-    }
 
-    .grid {
-      flex: 1 0;
-      display: grid;
-      grid-gap: $default-padding * 1.5;
-      grid-template-columns: repeat(auto-fit, minmax($card-width * 2, 1fr));
-      grid-template-rows: repeat(auto-fit, minmax(min-content, 1fr));
-      align-content: start;
-      justify-content: start;
-    }
-
-    ::ng-deep .books-grid {
-      @include scrollable-container;
-
-      nav {
-        mat-chip {
-          .mdc-evolution-chip__cell {
-            width: 100%;
-
-            .mdc-evolution-chip__action {
-              width: 100%;
-
-              .mdc-evolution-chip__text-label {
-                width: 100%;
-              }
-            }
-          }
-        }
-      }
-
-      .virtual-spacer {
-        grid-column: 1 / -1;
+      .books-list {
+        display: grid;
+        grid-template-columns: auto auto;
+        justify-content: start;
       }
     }
   }
