--- a/apps/site/src/app/features/book-search/components/books/book-search.component.html
+++ b/apps/site/src/app/features/book-search/components/books/book-search.component.html
@@ -20,16 +20,18 @@
     <span #loading></span>
   </h5>
   <ng-template #books>
-    @if (data()) { @if (data()!.length === 0) {
-    <span>Книги не найдены</span>
-    }
-    <div class="books-grid">
-      @for (item of data(); track item.id){
-      <nav>
-        <lib-tag-link [value]="item.id" linkPrefix="/book">{{
-          item.full
-        }}</lib-tag-link>
-      </nav>
+    @if (data()) {
+    <h5>Результаты поиска</h5>
+    <div class="books-list">
+      @for (item of data(); track item.id) {
+      <a [routerLink]="['/book', item.id]" class="underline">{{ item.full }}</a>
+      <lib-star-rating
+        [readOnly]="true"
+        [rating]="item.rating"
+        [showLabel]="false"
+      ></lib-star-rating>
+      } @empty {
+      <span>По Вашему запросу найти книги не удалось.</span>
       }
     </div>
     }
