BOOK-10: Присылать rating в результатах запросов search и advanced search

--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -46,7 +46,7 @@
       <lib-star-rating
         [readOnly]="true"
         [rating]="item.rating"
-        [showLabel]="false"
+        [showLabel]="true"
       ></lib-star-rating>
       } @empty {
       <span>По Вашему запросу найти книги не удалось.</span>
