--- a/apps/site/src/app/features/book-search/components/books/book-search.component.html
+++ b/apps/site/src/app/features/book-search/components/books/book-search.component.html
@@ -28,7 +28,7 @@
       <lib-star-rating
         [readOnly]="true"
         [rating]="item.rating"
-        [showLabel]="false"
+        [showLabel]="true"
       ></lib-star-rating>
       } @empty {
       <span>По Вашему запросу найти книги не удалось.</span>
