--- a/apps/site/src/app/features/author-card/components/author-card/author-card.component.html
+++ b/apps/site/src/app/features/author-card/components/author-card/author-card.component.html
@@ -10,7 +10,10 @@
     <lib-author-genres-list [genres]="author.genres"> </lib-author-genres-list>
     <span class="annotation" [innerHTML]="author.about"></span>
     <div class="books">
-      <lib-books-list [data]="signal(author.books)"></lib-books-list>
+      <lib-books-list
+        [data]="signal(author.books)"
+        title="Книги автора"
+      ></lib-books-list>
     </div>
   </div>
 </div>
