BOOK-20: "н/д" для аннотации сливается с годом

--- a/libs/ui/src/lib/components/book-card/book-card.component.html
+++ b/libs/ui/src/lib/components/book-card/book-card.component.html
@@ -25,8 +25,11 @@
     </lib-author-genres-list>
     @if (book.date) {
     <span class="date">{{ book.date }}</span>
-    }
+    } @if (book.annotation !== NOT_AVAILABLE) {
     <span class="annotation" [innerHTML]="book.annotation"></span>
+    } @else {
+    <span class="annotation disabled">Аннотация не доступна</span>
+    }
     <div class="action-panel">
       <button
         mat-fab
