--- a/libs/ui/src/lib/components/book-card/book-card.component.scss
+++ b/libs/ui/src/lib/components/book-card/book-card.component.scss
@@ -31,6 +31,10 @@
       .annotation {
         display: inline-block;
         text-align: justify;
+
+        &.disabled {
+          opacity: 0.3;
+        }
       }
 
       ::ng-deep lib-author-genres-list {
@@ -59,6 +63,7 @@
       }
 
       .date {
+        display: block;
         padding-left: calc($default-padding / 2);
       }
 
