BOOK-20: "н/д" для аннотации сливается с годом

--- a/libs/ui/src/lib/components/book-card/book-card.component.html
+++ b/libs/ui/src/lib/components/book-card/book-card.component.html
@@ -23,7 +23,7 @@
         ></lib-star-rating>
       </span>
       @if (book.date) {
-      <span>{{ book.date }}</span>
+      <div class="label-value medium">{{ book.date }} г.</div>
       }
     </lib-author-genres-list>
     @if (book.annotation !== NOT_AVAILABLE) {
