BOOK-16: Перенести скриллирование превью книги

--- a/apps/site/src/app/features/welcome/components/welcome.component.scss
+++ b/apps/site/src/app/features/welcome/components/welcome.component.scss
@@ -16,10 +16,9 @@
     }
   }
 
-  author,
-  book {
+  author-card,
+  book-card {
     border: $default-border;
-    border-radius: $default-border-radius;
     margin-bottom: $default-padding;
   }
 }
