BOOK-15: Отключить режим для чтения для iphone

--- a/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
+++ b/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
@@ -37,6 +37,7 @@ div {
       font-size: 32px;
       padding-left: 32px;
       margin-bottom: 16px;
+      line-height: 1.5;
     }
 
     lib-star-rating {
