BOOK-28: Заголоаок окна меняется на главной странице

--- a/libs/ui/src/lib/components/author-card/author-card.component.html
+++ b/libs/ui/src/lib/components/author-card/author-card.component.html
@@ -1,4 +1,4 @@
-@if (authorSummary(); as author) {
+@if (author(); as author) {
 <div>
   @if (author.image) {
   <img [src]="author.image" (error)="hideImage($event)" alt="Обложка книги" />
