--- a/libs/ui/src/lib/components/book-details/book-details.component.html
+++ b/libs/ui/src/lib/components/book-details/book-details.component.html
@@ -14,10 +14,6 @@
     >
       <mat-icon>close</mat-icon>
     </div>
-    <book-card
-      (click)="stopEvent($event)"
-      [book]="book()"
-      [updateWindowTitle]="false"
-    ></book-card>
+    <book-card (click)="stopEvent($event)" [book]="book()"></book-card>
   </dialog>
 </ng-template>
