BOOK-25: "Книги автора" во всплывающем окне

--- a/libs/ui/src/lib/components/author-card/author-card.component.html
+++ b/libs/ui/src/lib/components/author-card/author-card.component.html
@@ -12,7 +12,7 @@
     <div class="books">
       <lib-books-list
         [data]="signal(author.books)"
-        title="Книги автора"
+        headerText="Книги автора"
       ></lib-books-list>
     </div>
   </div>
