BOOK-5: Добавить актуальные заголовки для страниц сайта BOOK-6: Фильтр жанров не складывается после получения результатов поиска

--- a/apps/site/src/app/features/404/components/not-found.component.html
+++ b/apps/site/src/app/features/404/components/not-found.component.html
@@ -1,4 +1,6 @@
 <div class="container">
-  <h1>Ошибка 404</h1>
-  <h2>Страница не найдена</h2>
+  <h2>404 - не найдено</h2>
+
+  Запрашиваемая страница не найдена.<br>
+  Проверте адрес или перейдите на <a [routerLink]="['/index']" class="underline">главную</a> страницу.
 </div>
