BOOK-26: Сделать ограничение на количесвто выбранных жанров (3)

--- a/apps/site/src/app/features/advanced-search/components/genres-filter-control/genres-filter-control.component.html
+++ b/apps/site/src/app/features/advanced-search/components/genres-filter-control/genres-filter-control.component.html
@@ -11,6 +11,13 @@
       </mat-panel-description>
     </mat-expansion-panel-header>
     <div class="genres-list-container">
+      @if (form().errors?.['maxGenres']) {
+      <span class="error">
+        <mat-icon>error</mat-icon>
+        Пожалуйста, выберите не более
+        {{ form().errors?.['maxGenres'].max }} жанров
+      </span>
+      }
       <genres-list-filter [genres]="genreKeys"></genres-list-filter>
       <div class="genres-list" [formGroup]="form()">
         @for (genreKey of genreKeys(); track genreKey) {
