BOOK-36: Сделать корректную поддерку шрифтов

--- a/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
+++ b/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
@@ -21,7 +21,7 @@ div {
     }
 
     & * {
-      font-family: Literata, sans-serif !important;
+      font-family: Literata !important;
     }
 
     a {
