--- a/apps/site/src/app/main/styles/main.scss
+++ b/apps/site/src/app/main/styles/main.scss
@@ -1,60 +1,19 @@
 @use 'vars' as *;
+@use 'mat-theme' as *;
+@use 'fonts' as *;
+@use 'scrollbar' as *;
+@use 'mat-customization' as *;
+@use 'animations' as *;
 @use 'sass:color' as color;
-@use '@angular/material' as mat;
 
-$theme: mat.define-theme(
-  (
-    typography: (
-      plain-family: Roboto,
-      brand-family: Roboto,
-      bold-weight: 900,
-      medium-weight: 400,
-      regular-weight: 400,
-    ),
-    density: (
-      scale: 0,
-    ),
-  )
-);
-$light-theme: mat.define-theme(
-  (
-    color: (
-      theme-type: light,
-      primary: mat.$azure-palette,
-    ),
-  )
-);
-$dark-theme: mat.define-theme(
-  (
-    color: (
-      theme-type: dark,
-      primary: mat.$azure-palette,
-    ),
-  )
-);
+* {
+  box-sizing: border-box;
+}
 
 body {
-  @include mat.all-component-themes($theme);
-  @include mat.typography-hierarchy($theme);
-}
-
-body.light {
-  @include mat.all-component-colors($light-theme);
-}
-
-body.dark {
-  @include mat.all-component-colors($dark-theme);
-}
-
-html,
-body {
-  @include mat.elevation-classes();
-  @include mat.app-background();
-  background: var(--mat-sys-surface);
-  color: var(--mat-sys-on-surface);
-  margin: 0;
-  width: 100%;
+  min-width: $body-min-width;
   height: 100%;
+  overflow: hidden;
 }
 
 .p {
@@ -64,129 +23,39 @@ body {
   display: block;
 }
 
-::-webkit-scrollbar {
-  width: 15px;
-}
-::-webkit-scrollbar-track {
-  background-color: rgb(100 100 100 / 10%);
-}
-::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 6px;
-  background-color: rgb(100 100 100 / 80%);
-  min-height: 25px;
-}
-// Styles for touch devices
-@media (hover: none) and (pointer: coarse) {
-  ::-webkit-scrollbar {
-    width: 30px;
-  }
-  ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    min-height: 40px;
+a:not(.underline, .mdc-list-item) {
+  color: var(--mat-list-list-item-label-text-color, var(--mat-sys-on-surface));
+  font-weight: normal;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
   }
 }
 
-html {
-  a:not(.underline, .mdc-list-item) {
-    color: var(
-      --mat-list-list-item-label-text-color,
-      var(--mat-sys-on-surface)
-    );
-    font-weight: normal;
-    text-decoration: none;
+a.underline {
+  color: var(--mat-sys-primary);
 
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  a.underline {
-    color: var(--mat-sys-primary);
-
-    &:not([href]) {
-      text-decoration: underline;
-      cursor: pointer;
-      pointer-events: all;
-    }
-  }
-
-  mat-chip {
-    background-color: var(
-      --mat-fab-container-color,
-      var(--mat-sys-primary-container)
-    ) !important;
-
-    .mdc-evolution-chip__cell {
-      display: flex;
-      width: 100%;
-
-      .mdc-evolution-chip__action {
-        width: calc(100% - $default-padding) !important;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        a {
-          display: inherit;
-          width: inherit;
-          text-decoration: none;
-          overflow: hidden !important;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-        }
-      }
-    }
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-
-  button {
-    height: 36px !important;
-    border-radius: $default-border-radius !important;
-  }
-
-  body {
-    min-width: $body-min-width;
-    height: 100%;
-    overflow: hidden;
+  &:not([href]) {
+    text-decoration: underline;
+    cursor: pointer;
+    pointer-events: all;
   }
 }
 
-@keyframes error-message-amnimation {
-  from {
-    opacity: 0;
-    transform: translateX(-30px);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateX(0px);
-  }
+button {
+  height: 36px !important;
+  border-radius: $default-border-radius !important;
 }
 
 .error {
   display: flex;
   align-items: center;
   margin: $default-padding 0;
-  animation: error-message-amnimation 300ms;
+  animation: appear-left-to-right 300ms;
 
   mat-icon {
     margin-right: calc($default-padding / 2);
     color: #f44336;
   }
-}
-
-@font-face {
-  font-family: Literata;
-  src: url(/assets/fonts/LiterataBook.otf) format('opentype');
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: LiterataBold;
-  src: url(/assets/fonts/LiterataBook-Bold.otf) format('opentype');
-  font-weight: bold;
 }
