BOOK-33: Добавить в описание что есть онлйан библиотека на 500 0000 книг

--- a/apps/site/src/app/features/welcome/components/welcome.component.html
+++ b/apps/site/src/app/features/welcome/components/welcome.component.html
@@ -1,4 +1,16 @@
 <div class="container">
+  <section>
+    <h3>
+      Book-Play.ru – это онлайн-ресурс, где вы <b>бесплатно</b> можете
+      <b>прослушать</b> порядка <b>500 тысяч книг</b>
+    </h3>
+    Книги озвученны нейронной сетью. Это обширная коллекция для всех — от
+    классики до современности, сразу доступна в <b>удобном формате аудио</b>.
+    Простая навигация и качественная озвучка — идеальный способ наслаждаться
+    литературой в любом месте и в любое время.
+  </section>
+
+  <p>&nbsp;</p>
   @if (authorSummary().length > 1) {
   <h2>Случайные авторы дня:</h2>
   } @else if (authorSummary().length === 1) {
