--- a/apps/site/src/app/features/welcome/components/welcome.component.scss
+++ b/apps/site/src/app/features/welcome/components/welcome.component.scss
@@ -9,11 +9,9 @@
   }
 
   section {
-    max-width: 700px;
-
-    p {
-      margin-bottom: $default-padding;
-    }
+    max-width: $card-width * 3;
+    border: $default-border;
+    padding: $default-padding * 2;
   }
 
   author-card,
