--- a/apps/site/src/app/features/settings/components/settings/settings.component.scss
+++ b/apps/site/src/app/features/settings/components/settings/settings.component.scss
@@ -78,6 +78,12 @@
           }
         }
       }
+
+      &.readerViewSettings {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     }
 
     ::ng-deep {
