BOOK-27: Добавить имплементацию для режима чтения для страниц плеера

--- a/apps/site/src/app/features/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/features/settings/components/settings/settings.component.html
@@ -80,7 +80,7 @@
         <lib-color-picker
           color="#4B4B4B"
           value="dark"
-          title="Темный"
+          title="Серый"
         ></lib-color-picker>
         <lib-color-picker
           color="#111111"
