--- a/libs/ui/src/lib/components/color-picker/color-picker/color-picker.component.html
+++ b/libs/ui/src/lib/components/color-picker/color-picker/color-picker.component.html
@@ -1,3 +1,9 @@
-<div class="circle" [style.background]="color()" (click)="onClick()">
+<div
+  tabindex="0"
+  class="circle"
+  [style.background]="color()"
+  (click)="onClick()"
+  (keypress)="onClick()"
+>
   &nbsp;
 </div>
