BOOK-27: Добавить имплементацию для режима чтения для страниц плеера

--- a/apps/site/src/app/features/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/features/settings/components/settings/settings.component.html
@@ -68,22 +68,22 @@
     <fieldset class="readerViewSettings">
       <lib-color-picker-group formControlName="readerViewMode">
         <lib-color-picker
-          color="#FFFFFF"
+          color="var(--reader-view-white-color)"
           value="white"
           title="Белый"
         ></lib-color-picker>
         <lib-color-picker
-          color="#F6F0E3"
+          color="var(--reader-view-warm-color)"
           value="warm"
           title="Теплый"
         ></lib-color-picker>
         <lib-color-picker
-          color="#4B4B4B"
+          color="var(--reader-view-dark-color)"
           value="dark"
           title="Серый"
         ></lib-color-picker>
         <lib-color-picker
-          color="#111111"
+          color="var(--reader-view-black-color)"
           value="black"
           title="Черный"
         ></lib-color-picker>
