--- a/apps/site/src/app/main/styles/_fonts.scss
+++ b/apps/site/src/app/main/styles/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: 'Literata';
-  src: url('/assets/fonts/Literata-Regular.woff2') format('woff2'),
-    url('/assets/fonts/Literata-Regular.woff') format('woff');
+  font-family: 'SanFrancisco';
+  src: url('/assets/fonts/SFUIDisplay-Regular.woff2') format('woff2'),
+    url('/assets/fonts/SFUIDisplay-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
