--- a/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
+++ b/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
@@ -83,6 +83,8 @@ div {
       cursor: pointer;
       padding: 0 $default-padding * 2;
       text-align: start;
+      font-size: 19px;
+      line-height: 27px;
 
       &.active {
         font-weight: bold;
